problem 1 work in class

--- a/p8105_hw2_rsh2155.md
+++ b/p8105_hw2_rsh2155.md
@@ -1,18 +1,12 @@
----
-title: "Homework 2"
-author: "Rachel Heise"
-output: github_document
----
-
-```{r setup, include=FALSE}
-library(readxl)
-library(tidyverse)
-```
+Homework 2
+================
+Rachel Heise
 
 ## Problem 1
 
-Read in the Excel sheet for Mr. Trash Wheel data.
-```{r}
+Read in the Excel sheet for Mr. Trash Wheel data.
+
+``` r
 trashwheel_df = 
   read_xlsx(
     "./data/Trash-Wheel-Collection-Totals-8-6-19.xlsx",
@@ -28,7 +22,7 @@ trashwheel_df =
 
 Read precipitation data for 2017 and 2018.
 
-``` {r}
+``` r
 precip_2017_df =
   read_excel(
     "./data/Trash-Wheel-Collection-Totals-8-6-19.xlsx",
@@ -51,12 +45,11 @@ precip_2018_df =
   drop_na(month) %>% 
   mutate(year = 2017) %>% 
   relocate(year)
-
 ```
 
 Combine the two precipitation data sets.
 
-```{r}
+``` r
 month_df = 
   tibble(
     month = 1:12,
@@ -67,32 +60,41 @@ month_df =
 precip_df =
   bind_rows(precip_2017_df, precip_2018_df) %>% 
   left_join(month_df, by = "month")
-  
 ```
 
-Data from Mr. Trash Wheel in Baltimore, MD.
+Data from Mr. Trash Wheel in Baltimore, MD.
 
-What Mr. Trash Wheel does/how it operates
-What data is included
+What Mr. Trash Wheel does/how it operates What data is included
 
-There are `r nrow(trashwheel_df)` rows in our final data set. 
+There are 344 rows in our final data set.
 
-Key variables are:
-There is also data on monthly precipitation in additional sheets in Excel.
+Key variables are: There is also data on monthly precipitation in
+additional sheets in Excel.
 
-Total precipitation in 2018: `r `
-Median number of sports balls in a dumpster in 2017: `r `
-
-
-
-
+Total precipitation in 2018: `r` Median number of sports balls in a
+dumpster in 2017: `r`
 
 ## Problem 2
 
-```{r}
+``` r
 nyc_subway = read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv") %>%
   select(Line:Entry, Vending, ADA) %>% 
   mutate(Entry = recode(Entry, "YES" = TRUE, "NO" = FALSE))
 ```
 
+    ## Parsed with column specification:
+    ## cols(
+    ##   .default = col_character(),
+    ##   `Station Latitude` = col_double(),
+    ##   `Station Longitude` = col_double(),
+    ##   Route8 = col_double(),
+    ##   Route9 = col_double(),
+    ##   Route10 = col_double(),
+    ##   Route11 = col_double(),
+    ##   ADA = col_logical(),
+    ##   `Free Crossover` = col_logical(),
+    ##   `Entrance Latitude` = col_double(),
+    ##   `Entrance Longitude` = col_double()
+    ## )
 
+    ## See spec(...) for full column specifications.
