--- a/p8105_hw2_rsh2155.md
+++ b/p8105_hw2_rsh2155.md
@@ -147,9 +147,27 @@ nyc_subway = nyc_subway %>%
     values_to = "route_name"
     ) %>% 
   drop_na(route_name)
+
+
+distinct_A = nrow(
+  distinct(
+    filter(
+      nyc_subway, route_name == "A"), station_name, line, .keep_all = TRUE
+    )
+  )
+
+
+A_ADA = nrow(
+  distinct(
+    filter(
+      nyc_subway, route_name == "A", ada == TRUE),
+    station_name, line, .keep_all = TRUE
+    )
+  )
 ```
 
-`r` distinct stations serve the A train.
+60 distinct stations serve the A train, and 17 of those stations are ADA
+compliant.
 
 ## Problem 3
 
