--- a/p8105_hw2_rsh2155.md
+++ b/p8105_hw2_rsh2155.md
@@ -8,7 +8,7 @@ Read in the Excel sheet for Mr. Trash Wheel data.
 
 ``` r
 trashwheel_df = 
-  read_xlsx(
+  read_excel(
     "./data/Trash-Wheel-Collection-Totals-8-6-19.xlsx",
     sheet = "Mr. Trash Wheel",
     range = cell_cols("A:N")) %>% 
@@ -59,34 +59,33 @@ month_df =
 
 precip_df =
   bind_rows(precip_2017_df, precip_2018_df) %>% 
-  left_join(month_df, by = "month")
+  left_join(month_df, by = "month") %>% 
+  select(-month, month = "month_name") %>% 
+  relocate(year, month)
 ```
 
-Data from Mr. Trash Wheel in Baltimore, MD.
+This data comes from Mr. Trash Wheel in Baltimore, MD. The trash wheel
+sits in the Inner Harbor in Baltimore and collects trash which both
+cleans up the harbor and powers homes in the area. This data set is
+broken down by dumpster and includes information on the specific type of
+trash collected (glass bottles, grocery bags, sports balls, etc.), the
+volume and weight of the trash, and how many homes were powered by the
+garbage in each dumpster that was collected. the precipitation data set
+has data on the total precipitation in Baltimore each month. There are
+344 observations in the final trash wheel data set, and 24 observations
+in the final precipitation data set.
 
-What Mr. Trash Wheel does/how it operates What data is included
+Key variables are dumpster, homes\_powered, weight\_tons, and total
+precipitation.
 
-There are 344 rows in our final data set.
-
-Key variables are: There is also data on monthly precipitation in
-additional sheets in Excel.
-
-``` r
-summarize(filter(trashwheel_df, year == 2017), Median = median(sports_balls))
-```
-
-    ## # A tibble: 1 x 1
-    ##   Median
-    ##    <int>
-    ## 1      8
-
-Total precipitation in 2018: 70.33 Median number of sports balls in a
-dumpster in 2017: 8
+The total precipitation in 2018 was 70.33 and the median number of
+sports balls in a dumpster in 2017 were 8.
 
 ## Problem 2
 
 ``` r
-nyc_subway = read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv") %>%
+nyc_subway =
+  read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv") %>%
   select(Line:Entry, Vending, ADA) %>% 
   mutate(Entry = recode(Entry, "YES" = TRUE, "NO" = FALSE)) %>% 
   janitor::clean_names()
@@ -129,11 +128,26 @@ comparable information about each route is not necessarily found in the
 same column.
 
 ``` r
-distinct_subway = distinct(nyc_subway, station_name, route1, .keep_all = TRUE)
+distinct_subway = nyc_subway %>% 
+  distinct(station_name, line, .keep_all = TRUE)
+
+num_distinct = nrow(distinct_subway)
+
+num_ada = 
+  nrow(
+    filter(distinct_subway, ada == TRUE)
+  )
+
+no_vending = nrow(filter(nyc_subway, vending == "NO"))
+
+no_vending_entrance = nrow(filter(nyc_subway, vending == "NO", entry == TRUE))
 ```
 
-There are 450 distinct stations in this data set, of which 75 are ADA
+There are 465 distinct stations in this data set, of which 84 are ADA
 compliant.
+
+The proportion of station entrances and exits without vending that allow
+entrance is 0.3770492.
 
 Reformat data with route number and route name as distinct variables.
 
@@ -149,21 +163,13 @@ nyc_subway = nyc_subway %>%
   drop_na(route_name)
 
 
-distinct_A = nrow(
-  distinct(
-    filter(
-      nyc_subway, route_name == "A"), station_name, line, .keep_all = TRUE
-    )
-  )
+distinct_A = nyc_subway %>% 
+  filter(route_name == "A") %>% 
+  distinct(station_name, line, .keep_all = TRUE)
 
 
-A_ADA = nrow(
-  distinct(
-    filter(
-      nyc_subway, route_name == "A", ada == TRUE),
-    station_name, line, .keep_all = TRUE
-    )
-  )
+A_ADA = distinct_A %>%
+  filter(route_name == "A", ada == TRUE)
 ```
 
 60 distinct stations serve the A train, and 17 of those stations are ADA
@@ -180,8 +186,8 @@ month_df =
     month_name = month.name
   )
 
-pols_month = read_csv("./data/pols-month.csv") %>% 
-    janitor::clean_names() %>% 
+pols_month = read_csv("./data/pols-month.csv") %>%
+  janitor::clean_names() %>% 
   separate(mon, into = c("year", "month", "day"), sep = "[-]", convert = TRUE) %>% 
   left_join(month_df, by = "month") %>% 
   select(-month, -day, month = "month_name") %>% 
@@ -209,7 +215,7 @@ Read in and clean snp data.
 
 ``` r
 snp_df = read_csv("./data/snp.csv") %>% 
-    janitor::clean_names() %>% 
+  janitor::clean_names() %>% 
   separate(date, into = c("month", "day", "year"), sep = "[/]", convert = TRUE) %>% 
   left_join(month_df, by = "month") %>% 
   select(-month, -day, month = "month_name") %>% 
@@ -261,7 +267,7 @@ unemployment_df = read_csv("./data/unemployment.csv") %>%
     ##   Dec = col_double()
     ## )
 
-Combine the data sets.
+Combine the pols\_month, snp, and unemployment data sets.
 
 ``` r
 pols_month = 
@@ -273,13 +279,13 @@ pols_month =
 
 The pols-month data set contains information about the date each piece
 of data was collected, whether or not the president was republican or
-democratic, the number of republican and democratic governors, senators,
-and representatives. The snp data set reports the S\&P stock market
-index on each date that is recorded; this provides a high level measure
-of how the stock market is performing. The final data set used here was
-the unemployment data, which contained the percentage of unemployment
-for each month and year. After combining these data sets, the final data
-set contains 1644 observations and 12 columns. The range of years
-contained in this data set is 1947 through 2015. Key variables found in
-this data are close (the value of the stock market at close of
+democratic, and the number of republican and democratic governors,
+senators, and representatives. The snp data set reports the S\&P stock
+market index on each date that is recorded; this provides a high level
+measure of how the stock market is performing. The final data set used
+here is the unemployment data, which contains the percentage of
+unemployment for each month and year. After combining these data sets,
+the final data set contains 1644 observations and 12 columns. The range
+of years contained in this data set is 1947 through 2015. Key variables
+found in this data are close (the value of the stock market at close of
 business), unemployment, and president (democrat or republican).
