--- a/p8105_hw2_rsh2155.md
+++ b/p8105_hw2_rsh2155.md
@@ -4,7 +4,7 @@ Rachel Heise
 
 ## Problem 1
 
-Read in the Excel sheet for Mr. Trash Wheel data.
+Read in the Excel sheet for Mr. Trash Wheel data and clean.
 
 ``` r
 trashwheel_df = 
@@ -20,7 +20,7 @@ trashwheel_df =
   )
 ```
 
-Read precipitation data for 2017 and 2018.
+Read and clean precipitation data for 2017 and 2018.
 
 ``` r
 precip_2017_df =
@@ -70,18 +70,18 @@ cleans up the harbor and powers homes in the area. This data set is
 broken down by dumpster and includes information on the specific type of
 trash collected (glass bottles, grocery bags, sports balls, etc.), the
 volume and weight of the trash, and how many homes were powered by the
-garbage in each dumpster that was collected. the precipitation data set
-has data on the total precipitation in Baltimore each month. There are
-344 observations in the final trash wheel data set, and 24 observations
-in the final precipitation data set.
-
-Key variables are dumpster, homes\_powered, weight\_tons, and total
-precipitation.
+garbage in each dumpster. The precipitation data set has data on the
+total precipitation in Baltimore each month. There are 344 observations
+in the final trash wheel data set, and 24 observations in the final
+precipitation data set. Key variables are dumpster, homes\_powered,
+weight\_tons, and total precipitation.
 
 The total precipitation in 2018 was 70.33 and the median number of
 sports balls in a dumpster in 2017 were 8.
 
 ## Problem 2
+
+Read and clean the subway data.
 
 ``` r
 nyc_subway =
@@ -90,23 +90,6 @@ nyc_subway =
   mutate(Entry = recode(Entry, "YES" = TRUE, "NO" = FALSE)) %>% 
   janitor::clean_names()
 ```
-
-    ## Parsed with column specification:
-    ## cols(
-    ##   .default = col_character(),
-    ##   `Station Latitude` = col_double(),
-    ##   `Station Longitude` = col_double(),
-    ##   Route8 = col_double(),
-    ##   Route9 = col_double(),
-    ##   Route10 = col_double(),
-    ##   Route11 = col_double(),
-    ##   ADA = col_logical(),
-    ##   `Free Crossover` = col_logical(),
-    ##   `Entrance Latitude` = col_double(),
-    ##   `Entrance Longitude` = col_double()
-    ## )
-
-    ## See spec(...) for full column specifications.
 
 This data set contains data on aspects of the New York City Subway
 system. It includes information on subway stations and which lines and
@@ -198,19 +181,6 @@ pols_month = read_csv("./data/pols-month.csv") %>%
   relocate(year, month)
 ```
 
-    ## Parsed with column specification:
-    ## cols(
-    ##   mon = col_date(format = ""),
-    ##   prez_gop = col_double(),
-    ##   gov_gop = col_double(),
-    ##   sen_gop = col_double(),
-    ##   rep_gop = col_double(),
-    ##   prez_dem = col_double(),
-    ##   gov_dem = col_double(),
-    ##   sen_dem = col_double(),
-    ##   rep_dem = col_double()
-    ## )
-
 Read in and clean snp data.
 
 ``` r
@@ -221,12 +191,6 @@ snp_df = read_csv("./data/snp.csv") %>%
   select(-month, -day, month = "month_name") %>% 
   relocate(year, month)
 ```
-
-    ## Parsed with column specification:
-    ## cols(
-    ##   date = col_character(),
-    ##   close = col_double()
-    ## )
 
 Read in and clean unemployment data.
 
@@ -249,23 +213,6 @@ unemployment_df = read_csv("./data/unemployment.csv") %>%
   select(-month, month = "month_name") %>% 
   relocate(year, month)
 ```
-
-    ## Parsed with column specification:
-    ## cols(
-    ##   Year = col_double(),
-    ##   Jan = col_double(),
-    ##   Feb = col_double(),
-    ##   Mar = col_double(),
-    ##   Apr = col_double(),
-    ##   May = col_double(),
-    ##   Jun = col_double(),
-    ##   Jul = col_double(),
-    ##   Aug = col_double(),
-    ##   Sep = col_double(),
-    ##   Oct = col_double(),
-    ##   Nov = col_double(),
-    ##   Dec = col_double()
-    ## )
 
 Combine the pols\_month, snp, and unemployment data sets.
 
